correctif + rangement